--- a/package.json
+++ b/package.json
@@ -2,22 +2,25 @@
   "name": "group",
   "version": "1.0.0",
   "description": "simple group",
-  "keywords": [
-    "group"
+  "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
   ],
-  "homepage": "https://github.com/Reptar-IT/group#readme",
-  "bugs": {
-    "url": "https://github.com/Reptar-IT/group/issues"
+  "scripts": {
+    "dev": "npm run dev --workspaces",
+    "build": "npm run build --workspaces"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Reptar-IT/group.git"
   },
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "author": "Reco Daley",
-  "type": "typescript",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Reptar-IT/group/issues"
+  },
+  "homepage": "https://github.com/Reptar-IT/group#readme"
 }
