--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,5 +18,8 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
     "zod": "^4.2.1"
+  },
+  "devDependencies": {
+    "prisma": "^7.2.0"
   }
 }
