--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,14 +12,19 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@types/node": "^25.0.3",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "fastify-plugin": "^5.1.0",
+    "pg": "^8.16.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@types/pg": "^8.16.0",
     "prisma": "^7.2.0"
   }
 }
